
  * New upstream release.

  [ Rohan Garg ]
  * Don't install the dummy sensors plugin, it was removed in 5.4.1
    (see https://bugreports.qt.io/browse/QTBUG-39475).

  [ Dmitry Shachnev ]
  * Bump Qt build-dependencies to 5.4.1.
  * Update debian/watch to use https://download.qt.io/.
  * Disable tests that work only on local installations.

 -- Rohan Garg <rohan@garg.io>  Mon, 23 Feb 2015 15:39:52 +0100

qtsensors-opensource-src (5.4.0+dfsg-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.4.0.
  * Update and clean up debian/copyright.
  * Bump Standards-Version to 3.9.6, no changes needed.
  * Update libqt5sensors5.symbols.

  [ Timo Jyrinki ]
  * Update libqt5sensors5-dev.install.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 26 Dec 2014 13:13:01 +0300

qtsensors-opensource-src (5.3.2+dfsg-2) unstable; urgency=medium

  * Upload to unstable.
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 22 Sep 2014 23:53:24 -0300

qtsensors-opensource-src (5.3.2+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Update build-dependencies for Qt 5.3.2.
  * Update my e-mail address.
  * Update Vcs-Browser field to point to cgit interface.
  * Update debian/copyright for new release.
  * Use correct exception syntax in debian/copyright.
  * Build-depend on qtbase5-doc-html.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 18 Sep 2014 12:38:10 +0400

qtsensors-opensource-src (5.3.1+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.
  * Update symbols files with buildds' logs.
  * Disable test to sort out transition. Yes, ugly hack.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 02 Jul 2014 18:19:09 -0300

qtsensors-opensource-src (5.3.0+dfsg-3) unstable; urgency=medium

  * Drop transitional QML module package.